--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "feed": "^4.0.0",
     "fs-extra": "^8.1.0",
     "micromatch": "^4.0.2",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+		"showdown": "^1.9.1"
   }
 }
